Release 0.2.7
- add page numbering schemes PDF page labels. Including
  Roman and Decimal. Added to pdf-toc.p6

Release 0.2.6
- added pdf-toc.p6 (table-of-contents) utility
- further pdf-checker.p6 improvements:
  --trace option now displays encoded hex and text-strings as Perl strings

Release 0.2.5
- Added PDF::Filespec, PDF::Action::Launch
- pdf-checker.p6 improvements

Release 0.2.4
- Added PDF::Annot::Markup, PDF::Annot::Popup,
  PDF:::Annot::ThreeD, PDF::Markup::Markup3D

Release 0.2.3
- Fix PDF 1.6+ Cross Reference Streams, broken in 0.2.2

Release 0.2.2
- Fix PDF::Shading::Function
- Added PDF::ICCProfile, PDF::Annot::Caret, PDF::Signature,
  PDF::Action::JavaScript

Release 0.2.1
- Added PDF::Action::GoToR - goto remote
- Added PDF::Action::Named - named action
- Added PDF::Image. Use for PDF::Page.Thumb(thumbnail-image) attribute
- Changed PDF::FontDescriptor from a class to a role
- Removed subclass PDF::OutputIntent::GTS_PDFX
- Fixed setup of Resources ProcSet array
- Improved page navigation in pdf-checker.p6

Release 0.2.0
- Simplifications to PDF::Class::Loader. Made PDF::CIDSystemInfo a role.
- Corrections, mostly based on pdf-checker --strict feedback, to:
  PDF::Font::CIDFont, PDF::Metadata::XML, PDF::Pages,
  PDF::ViewerPreferences, PDF::Field::Signature,
  PDF::OutputIntent::GTS_PDFX, PDF::Catalog, PDF::Encoding,
  PDF::Catalog
  
Release 0.1.9
- Development of PDF::NameTree, PDF::NumberTree, PDF::StructElem and PDF::FontFile
- Further development of PDF::Destination. Both explicit and named destinations.
- Added PDF::Catalog.Dests coercements
- Fixed PDF::Action coercements

Release 0.1.8
- Add classess:
  -- PDF::OCG (Optional Content Groups)
  -- PDF::OCMD (Optional Content Membership Dictionary)
  -- PDF::MCR (Marked Content Reference)
- Remove some trivial single-use subsets. Replace with 'where' clauses on
  entry attributes.
- Move t:Doc::* test classes from lib/ to t/

Release 0.1.7