@@ -43,7 +43,7 @@ appendpdf.p6 - Append one PDF to another
 
 =head1 SYNOPSIS
 
- appendpdf.p6 [options] --save-as=output.pdf file1.pdf file2.pdf
+ pdf-append.p6 [options] --save-as=output.pdf file1.pdf file2.pdf
 
  Options:
    --save-as=file     save as a new PDF
